# slack-answers-bot

./: LICENSE.md  README.md
api/: AnswersApi.java  AnswersHttpApi.java  AnswersHttpApiModule.java  BUILD.bazel  SlackApi.java  SlackHttpApi.java  SlackHttpApiModule.java
app/: play.plugins
app/controllers/: TelescopeController.java  TelescopeEventsController.java  TelescopeSlashCommandsController.java
controllers/: Messages.java  SlackAnswersBotController.java
models/: ActionsBlock.java  Address.java  AnswersConfig.java  AnswersModule.java  AnswersResult.java  AnswersResultData.java  AnswersUniversalSearchResponse.java  BUILD.bazel  ButtonBlockElement.java  CallToAction.java  ChatPostMessageRequestBody.java  DirectAnswer.java  DirectAnswerAnswer.java  DirectAnswerData.java  DirectAnswerRelatedItem.java  DirectAnswerSnippet.java  DirectAnswerType.java  DividerBlock.java  EventTime.java  FieldsSectionBlock.java  HeaderBlock.java  ImageBlock.java  ImageBlockElement.java  SlackBlock.java  SlackBlockElementType.java  SlackBlockType.java  SlackButtonStyle.java  SlackEvent.java  SlackEventType.java  SlackEventsRequestPayload.java  SlackRequestPayload.java  SlackResponse.java  SlackSlashCommandsRequestPayload.java  SlackTextFormatType.java  SlackViewType.java  TextObject.java  TextSectionBlock.java  ThumbnailPhoto.java  UniversalResponse.java  ViewObject.java  (+1 more)
slackui/: BUILD.bazel  BlockListViewBuilder.java  BlockViewBuilder.java  SlackUIBuilderComponent.java  ViewPayloadBuilder.java  ViewPayloadObjectBuilder.java
slackui/blockelements/: BUILD.bazel  BoldMarkdownTextObjectBuilder.java  ButtonBlockElementBuilder.java  EmailButtonBlockElementBuilder.java  FieldMarkdownTextObjectBuilder.java  LinkMarkdownTextObjectBuilder.java  MarkdownTextObjectBuilder.java  PlainTextObjectBuilder.java  SimpleButtonBlockElementBuilder.java  TextObjectBuilder.java
slackui/blocks/: AccessorizingTextSectionBlockBuilder.java  ActionsBlockBuilder.java  ActionsBlockBuilderModule.java  ActionsButtonBlockBuilder.java  BUILD.bazel  HeaderBlockBuilder.java  SlackBlockBuilder.java  TextOnlyTextSectionBlockBuilder.java  TextOnlyTextSectionBlockBuilderModule.java  TextSectionBlockBuilder.java  TextSectionBlockBuildingWrapper.java  TextSectionBuildingWrapper.java
slackui/verticals/: BUILD.bazel  EventsVerticalBlockListBuilder.java  GuruVerticalBlockListBuilder.java  OfficesVerticalBlockListBuilder.java  QuicklinksVerticalBlockListBuilder.java  ResourcesVerticalBlockListBuilder.java  SlackChannelsVerticalBlockListBuilder.java  SpotifyPlaylistsVerticalBlockListBuilder.java  TeamsVerticalBlockListBuilder.java  Vertical.java  VerticalBlockListBuilder.java  VerticalBlockListBuilderRegistry.java  VerticalKey.java  YGoalsVerticalBlockListBuilder.java  YextbookVerticalBlockListBuilder.java  YouTubeVideosVerticalBlockListBuilder.java
util/: BUILD.bazel  JsonifyingSlackRequestPayloadParser.java  JsonifyingSlackRequestPayloadParserModule.java  SanitizingSlackRequestValidator.java  SanitizingSlackRequestValidatorModule.java  SlackRequestHashValidator.java  SlackRequestHashValidatorModule.java  SlackRequestParser.java  SlackRequestPayloadParser.java  SlackRequestPayloadParserModule.java  SlackRequestValidator.java  URLDecodingSlackRequestPayloadParser.java  URLDecodingSlackRequestPayloadParserModule.java
